The DNS benchmark now uses virtual threads and tests a significantly larger number of different DNS servers. Minor bugs have been fixed.